--- a/backend/config.json
+++ b/backend/config.json
@@ -3,7 +3,14 @@
         "addr": "00:15:61:ee:bb:d2",
         "nickname": "Donkey",
         "schedule": {
-            "Sun": [ {"1600": "ON"}, {"1800": "OFF"} ]
+            "Sun": [ {"0800": "OFF"}, {"1900": "ON"} ],
+            "Mon": [ {"0800": "OFF"}, {"1900": "ON"} ],
+            "Tue": [ {"0800": "OFF"}, {"1900": "ON"} ],
+            "Wed": [ {"0800": "OFF"}, {"1900": "ON"} ],
+            "Thu": [ {"0800": "OFF"}, {"1900": "ON"} ],
+            "Fri": [ {"0800": "OFF"}, {"1900": "ON"} ],
+            "Sat": [ {"0800": "OFF"}, {"1900": "ON"} ]
+            
         }
     },
     {
@@ -17,7 +24,7 @@
         "addr": "00:15:61:cc:81:71",
         "nickname": "Llama",
         "schedule": {
-            "Fri": [ {"1830": "ON"}, {"2000": "OFF"} ]
+            "Fri": [ {"1830": "ON"}, {"2030": "OFF"} ]
         }
     }
 ]
