--- a/backend/config.json
+++ b/backend/config.json
@@ -1,30 +1,34 @@
-[
-    {
-        "addr": "00:15:61:ee:bb:d2",
-        "nickname": "Donkey",
-        "schedule": {
-            "Sun": [ {"0800": "OFF"}, {"1900": "ON"} ],
-            "Mon": [ {"0800": "OFF"}, {"1900": "ON"} ],
-            "Tue": [ {"0800": "OFF"}, {"1900": "ON"} ],
-            "Wed": [ {"0800": "OFF"}, {"1900": "ON"} ],
-            "Thu": [ {"0800": "OFF"}, {"1900": "ON"} ],
-            "Fri": [ {"0800": "OFF"}, {"1900": "ON"} ],
-            "Sat": [ {"0800": "OFF"}, {"1900": "ON"} ]
-            
+{
+    "location": { "lat": "-37.81", "long": "144.96" },
+    "timers":
+    [
+        {
+            "addr": "00:15:61:ee:bb:d2",
+            "nickname": "Donkey",
+            "schedule": {
+                "Sun": [ {"2200": "ON"}, {"0800": "OFF"} ],
+                "Mon": [ {"0800": "OFF"}, {"1900": "ON"} ],
+                "Tue": [ {"0800": "OFF"}, {"1900": "ON"} ],
+                "Wed": [ {"0800": "OFF"}, {"1900": "ON"} ],
+                "Thu": [ {"0800": "OFF"}, {"1900": "ON"} ],
+                "Fri": [ {"0800": "OFF"}, {"1900": "ON"} ],
+                "Sat": [ {"0800": "OFF"}, {"1900": "ON"} ]
+                
+            }
+        },
+        {
+            "addr": "00:15:61:cc:85:e6",
+            "nickname": "Frog",
+            "schedule": {
+                "Sun": [ {"1600": "ON"}, {"1800": "OFF"} ]
+            }
+        },
+        {
+            "addr": "00:15:61:cc:81:71",
+            "nickname": "Llama",
+            "schedule": {
+                "Fri": [ {"1830": "ON"}, {"2030": "OFF"} ]
+            }
         }
-    },
-    {
-        "addr": "00:15:61:cc:85:e6",
-        "nickname": "Frog",
-        "schedule": {
-            "Sun": [ {"1600": "ON"}, {"1800": "OFF"} ]
-        }
-    },
-    {
-        "addr": "00:15:61:cc:81:71",
-        "nickname": "Llama",
-        "schedule": {
-            "Fri": [ {"1830": "ON"}, {"2030": "OFF"} ]
-        }
-    }
-]
+    ]
+}
