--- a/backend/config.json
+++ b/backend/config.json
@@ -6,13 +6,13 @@
             "addr": "00:15:61:ee:bb:d2",
             "nickname": "Donkey",
             "schedule": {
-                "Sun": [ {"2200": "ON"}, {"0800": "OFF"} ],
-                "Mon": [ {"0800": "OFF"}, {"1900": "ON"} ],
-                "Tue": [ {"0800": "OFF"}, {"1900": "ON"} ],
-                "Wed": [ {"0800": "OFF"}, {"1900": "ON"} ],
-                "Thu": [ {"0800": "OFF"}, {"1900": "ON"} ],
-                "Fri": [ {"0800": "OFF"}, {"1900": "ON"} ],
-                "Sat": [ {"0800": "OFF"}, {"1900": "ON"} ]
+                "Sun": [ {"$sunset - 120": "ON"}, {"$sunrise + 90": "OFF"}],
+                "Mon": [ {"$sunset - 120": "ON"}, {"$sunrise + 90": "OFF"}],
+                "Tue": [ {"$sunset - 120": "ON"}, {"$sunrise + 90": "OFF"}],
+                "Wed": [ {"$sunset - 120": "ON"}, {"$sunrise + 90": "OFF"}],
+                "Thu": [ {"$sunset - 120": "ON"}, {"$sunrise + 90": "OFF"}],
+                "Fri": [ {"$sunset - 120": "ON"}, {"$sunrise + 90": "OFF"}],
+                "Sat": [ {"$sunset - 120": "ON"}, {"$sunrise + 90": "OFF"}]
                 
             }
         },
@@ -20,7 +20,8 @@
             "addr": "00:15:61:cc:85:e6",
             "nickname": "Frog",
             "schedule": {
-                "Sun": [ {"1600": "ON"}, {"1800": "OFF"} ]
+                "Sun": [ {"$sunset - 120": "ON"}, {"0800": "OFF"} ],
+                "Mon": [ {"$sunrise + 90": "OFF"}, {"0800": "OFF"} ]
             }
         },
         {
